# SoOS

./: .clang-format  .clang-tidy  .gdbinit  .gitignore  .gitmodules  Cargo.toml  Linker.ld  Makefile  README.md  boot.asm  build.rs  build.zig  build.zig.zon  convert.py  interrupt.asm  iso.sh  kernel.c  kernel_entry.asm  limine.cfg  limine.conf  linker.ld  run.sh  vga.asm
.github/workflows/: Doxygen.yml  iso.yml  rust.yml
assembly/: boot.asm  kernel_entry.asm
docs/: Doxyfile  Syscalls.md
docs/html/: annotated.html  annotated_dup.js  classes.html  commands_8hpp_source.html  dir_2ae24886e77657f82343b4b0154efdc1.html  dir_2ae24886e77657f82343b4b0154efdc1.js  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_4fe5cf12322eb0f9892753dc20f1484c.html  dir_4fe5cf12322eb0f9892753dc20f1484c.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_745700af6849d78dd97e86fef1afc06e.html  dir_a61f22007e0f347cded0d82030ee545d.html  dir_a61f22007e0f347cded0d82030ee545d.js  dir_c718a368270b13c54d94892d20736f45.html  dir_c85d3e3c5052e9ad9ce18c6863244a25.html  dir_cbd7f246bdf7dc0a50281a272327e6ed.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_f151aa63443751250c839de22ac15b14.html  dir_f151aa63443751250c839de22ac15b14.js  files.html  idt_8hpp_source.html  index.html  io_8hpp_source.html  namespaces.html  (+33 more)
include/: commands.h  commands.hpp  idt.h  io.h  io.hpp  isr.h  keyboard.h  pcspkr.h  pcspkr.hpp  print.h  rtc.h  shell.h  shell.hpp  soos_math.h  soos_mem.h  soos_mem.hpp  soos_string.h  soos_string.hpp  timer.h  vga.h  vga.hpp
kernel/: Cargo.toml  build.rs  build.zig  build.zig.zon  link.ld  linker.ld
src/: allocator.rs  apic.rs  asm.rs  assembly.s  boot.asm  commands.c  commands.cpp  detect_memory.asm  display.rs  elf.rs  fifo.rs  font.rs  gdt.asm  helpers.asm  idt.c  idt.cpp  idt.rs  interrupt.asm  io.c  io.rs  isr.c  isr.cpp  isr.rs  kernel.c  keyboard.c  logger.rs  main.rs  paging.asm  panic.rs  pcspkr.c  pcspkr.cpp  pic.rs  pre_kernel.asm  print.c  process.rs  real_mode.asm  rtc.c  rtc.cpp  scheduler.rs  shell.c  (+14 more)
tools/: img2vga.py
typedefs/: events.h  syscalls.h  types.h
types/: syscalls.h  types.h
userspace/: .clang-format  Cargo.toml  Makefile  loop.c  loop.elf  main.c  main.elf  rust-toolchain  soos.c  soos.h  soos_syscall.c  soos_syscall.h
(+185 files in other folders)
