[package]
name = "soos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["alloc"] }
elf_rs = "0.3.0"
limine = "0.1.11"
linked_list_allocator = "0.10.5"
log = "0.4.19"
once_cell = { version = "1.18.0", default-features = false }
raw-cpuid = "11.0.1"
spin = "0.9.8"
x86_64 = { version = "0.14.10", default-features = false, features = [
    "abi_x86_interrupt",
    "instructions",
] }
