[package]
name = "soos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned = "0.4.1"
anyhow = { version = "1.0.75", default-features = false }
byte-unit = { version = "5.1.4", default-features = false, features = ["byte"] }
chrono = { version = "0.4.31", default-features = false }
elf_rs = "0.3.0"
include_bytes_aligned = "0.1.3"
limine = "0.1.11"
linked_list_allocator = "0.10.5"
log = "0.4.19"
once_cell = { version = "1.18.0", default-features = false }
raw-cpuid = "11.0.1"
spin = "0.9.8"
x86_64 = { version = "0.14.10", default-features = false, features = [
    "abi_x86_interrupt",
    "instructions",
] }
